// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdentityOverview should expand last credential when there are less than 7 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Identities
      </h1>
      <p
        class="subline"
      >
        You have 3 Identities
      </p>
    </header>
    <div
      class="container"
    >
      <section
        class="container"
      >
        <div
          class="avatar"
        >
          Identicon
        </div>
        <div
          class="nameLine"
        >
          <span
            class="name"
          >
            Light DID Identity
          </span>
          <div
            class="wrapper"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Identity options"
              class="toggle"
              role="button"
              tabindex="0"
              title="Identity options"
              type="button"
            />
          </div>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/identity/NEW"
        title="Add Identity"
      />
      <a
        aria-label="Identity with on-chain DID and lots of coins"
        class="right"
        href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
        title="Identity with on-chain DID and lots of coins"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Light DID Identity"
            class="bubble bubbleActive"
            href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
            title="Light DID Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Identity with on-chain DID and lots of coins"
            class="bubble"
            href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
            title="Identity with on-chain DID and lots of coins"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Identity which has a very very very very long name and might not even fit on the screen"
            class="bubble"
            href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653"
            title="Identity which has a very very very very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Add Identity"
            class="add"
            href="/identity/NEW"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <ul
      class="credentials"
    >
      <li>
        <a
          class="importCredential"
          href="/popup/import"
        >
          + Import Credential
        </a>
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Sporran email
            </h4>
            <p
              class="collapsedValue"
            >
              sporran@sporran.org
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Alter Ego Email
            </h4>
            <p
              class="collapsedValue"
            >
              badboy69@hotmail.com
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="true"
        class="credential"
      >
        <section
          class="expanded"
        >
          <section
            class="buttons"
          >
            <button
              aria-label="Collapse credential details"
              class="collapse"
              type="button"
            />
            <a
              aria-label="Back up credential"
              class="download"
              download="Email Credential-Email.json"
              href="data:text/json;base64,eyJraWx0Q3JlZGVudGlhbCI6eyJjbGFpbSI6eyJjVHlwZUhhc2giOiIweDMyOTFiYjEyNmUzM2I0ODYyZDQyMWJmYWExZDJmMjcyZTZjZGZjNGY5NjY1ODk4OGZiY2ZmZWE4OTE0YmQ5YWMiLCJjb250ZW50cyI6eyJFbWFpbCI6Im1vY2tFbWFpbEBtb2NrLm1vY2sifSwib3duZXIiOiJkaWQ6a2lsdDpsaWdodDowMDRvVWlLM0V2VGN6YzZ1a1lMRVY1N0J1eHprVzl6a3NLUmNoWlhZR1NvY0xtV0U1TiJ9LCJjbGFpbUhhc2hlcyI6WyIweDE0NDU5N2QyODQ1ZTMyNWRmZmQ0ZTUxYTk0ZTNlOWMwNGI1MmRjMTU3M2U2NmFmYzY5Mzg0NmQ5MWYzMWE3MTMiLCIweDMxNzdlYTQxZjc2ZDA2NmQxOTEyM2MyY2IwZGUxM2EzN2Q2MzkwNmQyYzUxOWUzNmZiZmQ3NzczZmFjMWI3MTgiLCIweDlkMmRjYWY1MjM4ZDZiYzRiY2YwMzI4YWVkYjE2ODk0MzZlMDc3ZWJmNjE5OGI2YzRlOTYxNjY0ODA3ZWFlZGYiLCIweGNlZTE5M2ZmZGZhNjM0ODc5MDdkZmUwODQ4YWUxNTBkNGE3MTk2Y2MxZTNkNWJkMmM4OWJlY2I1NDAyZWZjMDciXSwiY2xhaW1Ob25jZU1hcCI6eyIweDU3NDU4YTY5NzJlNzgyMjNjZDRmN2Y0YzU5MjM2ZWE3NmYzODdhZTU3MWFiN2U3OTQ2MGY1NmYyYWE5NzYyM2YiOiJkMGM5ZDY0Ny00MmVmLTRkNDQtYjYwMy0zYjc3NjI2MGE2ZGQiLCIweGNlZmUyYjg4ZDEwODM0ODY5ZGFkM2U4ZDczMDZmNWFhOTlhMWYwNzgyMTRhZGVhZTc5Y2JlZWQzMDNlNjM4YWYiOiI2YjYyMzA4Yy04NTU3LTRiNjEtYWMwMi04ZjkwNTU1NWQ2N2IiLCIweDhiZTMyZDdlOWNjNTAxNWJmNzFiNWM0NTU1MGE4NzkwYzQzYjlhMjZkYmZhOWE4NTIzODcxMjExNzQ1ZDMzYTMiOiIyNDczOTRjMC1kNDZiLTQ4MmEtYjBjNS00OTNhZWI1MDZkNjEiLCIweDEzNjFhN2JhNzUxMjU2ZTlhYzZiM2UzZTI0OTEyZTUwZTY4YmVmNjc4YzUxMzJjMTFjOTU2NzgyMjBlM2JmNWUiOiIwN2I5NWYxNy0zZjIzLTRhOWUtOGY0My0zMzg4MTI3MzY4MmMifSwibGVnaXRpbWF0aW9ucyI6W10sImRlbGVnYXRpb25JZCI6bnVsbCwicm9vdEhhc2giOiIweGJlN2ZjYzdhYTAxODZiMDVmZDExNmMxMDBlMmQ2NzNmYjk1MTE2MzY5Mzc4ODY0MGNlNjAzMmFkMmY3MDBkYWUifSwibmFtZSI6IkVtYWlsIENyZWRlbnRpYWwiLCJjVHlwZVRpdGxlIjoiRW1haWwiLCJhdHRlc3RlciI6IlRydXN0ZWQgRW50aXR5IGF0dGVzdGVyIiwic3RhdHVzIjoiYXR0ZXN0ZWQiLCJpc0Rvd25sb2FkZWQiOnRydWV9"
            />
            <button
              aria-label="Remove credential"
              class="remove"
              type="button"
            />
          </section>
          <dl
            class="details"
          >
            <div
              class="detail"
            >
              <dt
                class="detailName"
              >
                Credential name
              </dt>
              <dd
                class="nameValue"
              >
                Email Credential
                <button
                  aria-label="Edit credential name"
                  class="editName"
                />
              </dd>
            </div>
            <div
              class="detail"
            >
              <dt
                class="detailName"
              >
                Status
              </dt>
              <dd
                class="detailValue"
              >
                Attested
              </dd>
            </div>
            <div
              class="detail"
            >
              <dt
                class="detailName"
              >
                Email
              </dt>
              <dd
                class="detailValue"
              >
                mockEmail@mock.mock
              </dd>
            </div>
          </dl>
          <h4
            class="technical"
          >
            Technical details
          </h4>
          <dl
            class="details"
          >
            <div
              class="detail"
            >
              <dt
                class="detailName"
              >
                CType
              </dt>
              <dd
                class="detailValue"
              >
                Email
              </dd>
            </div>
            <div
              class="detail"
            >
              <dt
                class="detailName"
              >
                Attester
              </dt>
              <dd
                class="detailValue"
              >
                Trusted Entity attester
              </dd>
            </div>
            <div
              class="hash"
            >
              <dt
                class="detailName"
              >
                Credential hash
              </dt>
              <dd
                class="detailValue"
              >
                0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae
              </dd>
            </div>
          </dl>
        </section>
        <div />
      </li>
    </ul>
  </main>
</div>
`;

exports[`IdentityOverview should render a normal identity 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Identities
      </h1>
      <p
        class="subline"
      >
        You have 3 Identities
      </p>
    </header>
    <div
      class="container"
    >
      <section
        class="container"
      >
        <div
          class="avatar"
        >
          Identicon
        </div>
        <div
          class="nameLine"
        >
          <span
            class="name"
          >
            Light DID Identity
          </span>
          <div
            class="wrapper"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Identity options"
              class="toggle"
              role="button"
              tabindex="0"
              title="Identity options"
              type="button"
            />
          </div>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/identity/NEW"
        title="Add Identity"
      />
      <a
        aria-label="Identity with on-chain DID and lots of coins"
        class="right"
        href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
        title="Identity with on-chain DID and lots of coins"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Light DID Identity"
            class="bubble bubbleActive"
            href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
            title="Light DID Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Identity with on-chain DID and lots of coins"
            class="bubble"
            href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
            title="Identity with on-chain DID and lots of coins"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Identity which has a very very very very long name and might not even fit on the screen"
            class="bubble"
            href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653"
            title="Identity which has a very very very very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Add Identity"
            class="add"
            href="/identity/NEW"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <ul
      class="credentials"
    >
      <li>
        <a
          class="importCredential"
          href="/popup/import"
        >
          + Import Credential
        </a>
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Lots of props
            </h4>
            <p
              class="collapsedValue"
            >
              Proppy
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              All your stakes are belong to us
            </h4>
            <p
              class="collapsedValue"
            >
              This is a really long name for the first property of claim contents to check how the overflow looks
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Dotsama Credential
            </h4>
            <p
              class="collapsedValue"
            >
              God collator
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Believe me
            </h4>
            <p
              class="collapsedValue"
            >
              realDonaldTrump
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Tweet Twit Twat
            </h4>
            <p
              class="collapsedValue"
            >
              tweety_bird
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Mein Credential
            </h4>
            <p
              class="collapsedValue"
            >
              maxmustermann@gmx-123-z34-dfdsafsdf-42r421-2sdfag.de
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              A really long name for my credential which probably will not fit on the screen
            </h4>
            <p
              class="collapsedValue"
            >
              loremipsum@gmail.com
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Sporran email
            </h4>
            <p
              class="collapsedValue"
            >
              sporran@sporran.org
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Alter Ego Email
            </h4>
            <p
              class="collapsedValue"
            >
              badboy69@hotmail.com
            </p>
          </section>
        </button>
        <div />
      </li>
      <li
        aria-expanded="false"
        class="credential"
      >
        <button
          class="expand"
          type="button"
        >
          <section
            class="collapsedCredential"
          >
            <h4
              class="collapsedName"
            >
              Email Credential
            </h4>
            <p
              class="collapsedValue"
            >
              mockEmail@mock.mock
            </p>
          </section>
        </button>
        <div />
      </li>
    </ul>
  </main>
</div>
`;

exports[`IdentityOverview should render the new identity 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Identities
      </h1>
      <p
        class="subline"
      >
        You have 3 Identities
      </p>
    </header>
    <div
      class="container"
    >
      <section>
        <a
          aria-label="Add Identity"
          class="add"
          href="/identity/add"
          title="Add Identity"
        />
      </section>
      <a
        aria-label="Identity which has a very very very very long name and might not even fit on the screen"
        class="left"
        href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653"
        title="Identity which has a very very very very long name and might not even fit on the screen"
      />
      <a
        aria-label="Light DID Identity"
        class="right"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
        title="Light DID Identity"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-label="Light DID Identity"
            class="bubble"
            href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
            title="Light DID Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Identity with on-chain DID and lots of coins"
            class="bubble"
            href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
            title="Identity with on-chain DID and lots of coins"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Identity which has a very very very very long name and might not even fit on the screen"
            class="bubble"
            href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653"
            title="Identity which has a very very very very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/identity/NEW"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <a
      class="add"
      href="/identity/add"
    >
      Add Identity
    </a>
  </main>
</div>
`;

exports[`IdentityOverview should render when no credentials 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Identities
      </h1>
      <p
        class="subline"
      >
        You have 3 Identities
      </p>
    </header>
    <div
      class="container"
    >
      <section
        class="container"
      >
        <div
          class="avatar"
        >
          Identicon
        </div>
        <div
          class="nameLine"
        >
          <span
            class="name"
          >
            Light DID Identity
          </span>
          <div
            class="wrapper"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Identity options"
              class="toggle"
              role="button"
              tabindex="0"
              title="Identity options"
              type="button"
            />
          </div>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/identity/NEW"
        title="Add Identity"
      />
      <a
        aria-label="Identity with on-chain DID and lots of coins"
        class="right"
        href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
        title="Identity with on-chain DID and lots of coins"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Light DID Identity"
            class="bubble bubbleActive"
            href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
            title="Light DID Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Identity with on-chain DID and lots of coins"
            class="bubble"
            href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
            title="Identity with on-chain DID and lots of coins"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Identity which has a very very very very long name and might not even fit on the screen"
            class="bubble"
            href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653"
            title="Identity which has a very very very very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Add Identity"
            class="add"
            href="/identity/NEW"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <ul
      class="credentials"
    >
      <li>
        <a
          class="importCredential"
          href="/popup/import"
        >
          + Import Credential
        </a>
      </li>
      <li
        class="noCredentials"
      >
        <p
          class="info"
        >
          No credentials available
        </p>
        <a
          class="explainerLink"
          href="https://socialkyc.io/"
          rel="noreferrer"
          target="_blank"
        >
          How To Get Credentials
        </a>
      </li>
    </ul>
  </main>
</div>
`;
